# grumble

./: LICENSE  README.md  grumble.cabal
app/: Main.hs
https/github.com/therealcurlsport/: neural-networks-and-deep-learning
src/: Connection.hs  Grelude.hs  Message.hs
src/Grumble/: Client.hs  Connection.hs  Message.hs  Prelude.hs
src/Grumble/Client/: Monad.hs  Responders.hs  Types.hs
src/Grumble/Client/Internal/: Monad.hs  Types.hs
