name:                grumble
version:             0.1.0.0
synopsis:            IRC client for fun
description:         Please see README.md
homepage:            http://github.com/mdunsmuir/grumble#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Michael Dunsmuir
maintainer:          mjdunsmuir@gmail.com
copyright:           Copyright (c) 2016 Michael Dunsmuir
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Message
                     , Connection
                     , Grelude
  build-depends:       base >= 4.7 && < 5
                     , network
                     , hslogger
                     , bytestring
                     , string-conversions
                     , parsec
                     , async
  extensions:          RecordWildCards
                     , DeriveDataTypeable
                     , OverloadedStrings
  default-language:    Haskell2010

executable grumble
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grumble
                     , hslogger
                     , async
  extensions:          RecordWildCards
  default-language:    Haskell2010

test-suite grumble-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grumble
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/grumble
